--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -13,27 +13,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Generate .env file
-        uses: SpicyPizza/create-envfile@v2.0
+        uses: horlakz/secretenv@v1
         with:
-          envkey_AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-          envkey_AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-          envkey_AWS_REGION: ${{ secrets.AWS_REGION }}
-          envkey_AWS_BUCKET: ${{ secrets.AWS_BUCKET }}
+          secrets_json: ${{ toJSON(secrets) }}
 
-          envkey_PORT: ${{ secrets.PORT }}
-
-          envkey_DB_HOST: ${{ secrets.DB_HOST }}
-          envkey_DB_USER: ${{ secrets.DB_USER }}
-          envkey_DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          envkey_DB_PORT: ${{ secrets.DB_PORT }}
-          envkey_DB_NAME: ${{ secrets.DB_NAME }}
-          envkey_REDIS_SERVER: ${{ secrets.REDIS_SERVER }}
-
-          envkey_JWT_ACCESS_SECRET: ${{ secrets.JWT_ACCESS_SECRET }}
-          envkey_JWT_REFRESH_SECRET: ${{ secrets.JWT_REFRESH_SECRET }}
-
-          file_name: .env
-          fail_on_empty: true
 
       - name: set up golang
         uses: actions/setup-go@v5
